# PK232py

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  Sources2Text.ps1  check_repo.ps1  check_repo.sh  patch_main_window.py  patch_serial_manager.py  pk232_debug.py  pk232py_sources.txt  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  publish.yml  release.yml
docs/: PK232PY_Spezifikation.docx
src/pk232py/: __init__.py  __main__.py  config.py  main.py  mode_manager.py
src/pk232py/comm/: __init__.py  autobaud.py  constants.py  frame.py  hostmode.py  kiss.py  params_uploader.py  pk232_hostmode_sub.py  serial_manager.py  serial_port.py
src/pk232py/log/: __init__.py  qso_log.py
src/pk232py/macros/: __init__.py  macro_manager.py
src/pk232py/modes/: __init__.py  amtor.py  base_mode.py  fax.py  maildrop_mode.py  morse.py  navtex.py  packet_hf.py  packet_vhf.py  pactor.py  rtty_ascii.py  rtty_baudot.py  signal_analysis.py  tdm.py
src/pk232py/tests/: __init__.py  test_hostmode.py
src/pk232py/ui/: __init__.py  appearance_dialog.py  main_window.py  tnc_config_dialog.py
src/pk232py/ui/dialogs/: __init__.py  params_amtor.py  params_hf.py  params_maildrop.py  params_misc.py  params_pactor.py  tnc_config.py
src/pk232py/ui/screens/: opmode_rtty_base.py  pactor_screen.py
src/pk232py/ui/widgets/: __init__.py
